--- a/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
+++ b/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="container m-b-20" [formGroup]="form" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-        <mat-form-field fxFlex="31%" *ngIf="form.contains('txnCode')">
+        <mat-form-field fxFlex="20%" *ngIf="form.contains('txnCode')">
           <mat-label>{{ "Saving_Account_Component.tabTransactions.lblTransactionType" | translate }}</mat-label>
           <mat-select formControlName="txnCode">
             <mat-option *ngFor="let type of transactionType" [value]="type.id">
@@ -55,13 +55,17 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field fxFlex="31%">
+        <mat-form-field fxFlex="20%">
           <mat-label>{{ "Saving_Account_Component.tabTransactions.lblTransactionType2" | translate }}</mat-label>
           <input formControlName="paymentDetail" matInput />
         </mat-form-field>
-        <mat-form-field fxFlex="31%">
+        <mat-form-field fxFlex="20%">
           <mat-label>{{ "Saving_Account_Component.tabTransactions.lblNote" | translate }}</mat-label>
           <input formControlName="note" matInput />
+        </mat-form-field>
+        <mat-form-field fxFlex="20%">
+          <mat-label>Đối tác</mat-label>
+          <input formControlName="routingCode" matInput />
         </mat-form-field>
       </div>
     </div>
@@ -114,9 +118,14 @@
 
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef>
-          {{ "Saving_Account_Component.tabTransactions.lblTransactionType2" | translate }}
+          {{ "Saving_Account_Component.tabTransactions.lblTransactionType2" | translate }} / <br />
+          Đối tác
         </th>
-        <td mat-cell *matCellDef="let transaction">{{ transaction.paymentDetailId }}</td>
+        <td mat-cell *matCellDef="let transaction">
+          {{ transaction.paymentDetailId }}
+          <br />
+          <labe style="color: red; font-weight: bold">{{ transaction.routingCode }}</labe>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="note">
