--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -65,7 +65,19 @@
       </select>
     </mat-form-field>
 
-    <mat-form-field fxFlex="36%">
+    <mat-form-field fxFlex="18%">
+      <mat-label>Loại thẻ</mat-label>
+      <select matSelect matNativeControl formControlName="cardType">
+        <option value="ALL">
+          Tất cả loại thẻ
+        </option>
+        <option *ngFor="let card of cardTypeOption" [value]="card.code">
+          {{ card.description }}
+        </option>
+      </select>
+    </mat-form-field>
+
+    <mat-form-field fxFlex="18%">
       <mat-label>Tìm tên khách hàng/số thẻ</mat-label>
       <input matInput formControlName="query" />
     </mat-form-field>
