--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -55,7 +55,7 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field fxFlex="12%">
+    <mat-form-field fxFlex="20%">
       <mat-label>Ngân hàng</mat-label>
       <select matSelect matNativeControl formControlName="bankFilter">
         <option value="ALL">Tất cả ngân hàng</option>
@@ -64,21 +64,34 @@
         </option>
       </select>
     </mat-form-field>
-    <mat-form-field fxFlex="10%">
-      <mat-label>Ngày đến hạn</mat-label>
-      <input  type="number" matInput #dueDay min="0" max="31"  formControlName="dueDay" />
+
+    <mat-form-field fxFlex="20%">
+      <mat-label>Loại thẻ</mat-label>
+      <select matSelect matNativeControl formControlName="cardType">
+        <option value="ALL">
+          Tất cả loại thẻ
+        </option>
+        <option *ngFor="let card of cardTypeOption" [value]="card.code">
+          {{ card.description }}
+        </option>
+      </select>
     </mat-form-field>
-    <mat-form-field fxFlex="18%">
-      <mat-label>Thông tin khách hàng</mat-label>
-      <input matInput type="text" formControlName="query" />
-    </mat-form-field>
+
     <div fxFlex="10%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
       <mat-label ></mat-label>
       <mat-checkbox fxFlex="100%" labelPosition="after" formControlName="viewDoneTransaction" class="margin-v">
         Đã thực hiện xong
       </mat-checkbox>
-
     </div>
+
+    <mat-form-field fxFlex="20%">
+      <mat-label>Ngày đến hạn</mat-label>
+      <input  type="number" matInput #dueDay min="0" max="31"  formControlName="dueDay" />
+    </mat-form-field>
+    <mat-form-field fxFlex="20%">
+      <mat-label>Thông tin khách hàng</mat-label>
+      <input matInput type="text" formControlName="query" />
+    </mat-form-field>
 
   </div>
 
