--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -34,7 +34,6 @@
       </div>
     </div>
     <div class="container" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column"></div>
-
   </mat-card-content>
 
   <div [formGroup]="formFilter" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
@@ -68,31 +67,52 @@
     <mat-form-field fxFlex="20%">
       <mat-label>Loại thẻ</mat-label>
       <select matSelect matNativeControl formControlName="cardType">
-        <option value="ALL">
-          Tất cả loại thẻ
-        </option>
+        <option value="ALL">Tất cả loại thẻ</option>
         <option *ngFor="let card of cardTypeOption" [value]="card.code">
           {{ card.description }}
         </option>
       </select>
     </mat-form-field>
-
-    <div fxFlex="10%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-      <mat-label ></mat-label>
-      <mat-checkbox fxFlex="100%" labelPosition="after" formControlName="viewDoneTransaction" class="margin-v">
-        Đã thực hiện xong
-      </mat-checkbox>
-    </div>
+    <mat-form-field fxFlex="10%">
+      <mat-label>Tình trạng thẻ</mat-label>
+      <select matSelect matNativeControl formControlName="cardHoldFilter">
+        <option *ngFor="let status of cardHoldOption" [value]="status.code">
+          {{ status.description }}
+        </option>
+      </select>
+    </mat-form-field>
 
     <mat-form-field fxFlex="20%">
       <mat-label>Ngày đến hạn</mat-label>
-      <input  type="number" matInput #dueDay min="0" max="31"  formControlName="dueDay" />
+      <input type="number" matInput #dueDay min="0" max="31" formControlName="dueDay" />
     </mat-form-field>
     <mat-form-field fxFlex="20%">
       <mat-label>Thông tin khách hàng</mat-label>
       <input matInput type="text" formControlName="query" />
     </mat-form-field>
 
+
+    <mat-form-field fxFlex="20%" >
+      <select matSelect matNativeControl formControlName="isCheckedFilter">
+        <option *ngFor="let status of CheckedFilterOption" [value]="status.code">
+          {{ status.description }}
+        </option>
+      </select>
+
+    </mat-form-field>
+
+    <div *ngIf="formFilter.value.isCheckedFilter == 2 " fxFlex="10%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+      <label for=""></label>
+      <input  matInput type="text" formControlName="checkedByUserName" placeholder="Lọc nhân viên chọn" />
+    </div>
+
+    <div fxFlex="10%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+      <label></label>
+      <mat-checkbox fxFlex="100%" labelPosition="after" formControlName="viewDoneTransaction" class="margin-v">
+        Đã thực hiện xong
+      </mat-checkbox>
+
+    </div>
   </div>
 
   <mat-card-content>
@@ -188,19 +208,22 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="feeAmount">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Phí thu</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          {{ ((journalEntry?.feePercentage / 100) * journalEntry?.reqAmount).toFixed(0) | money }}
+      <ng-container matColumnDef="isCheck">
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Đã được chọn</th>
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card" style="width: 12ß0px">
+          <input
+            matCheckbox
+            type="checkbox"
+            [disabled]="card.checkedByStaff && currentUser.userId != card.checkedByStaffId"
+            [checked]="card.checkedByStaff"
+            (change)="checkedRollTermBooking(card.refid, card.checkedByStaff)"
+          />
+
+          <label style="color: red; font-weight: bold" *ngIf="card.checkedByStaff" for="">
+            √{{ card.checkedByStaff }}</label
+          >
         </td>
       </ng-container>
-
-      <!-- <ng-container matColumnDef="cardNumber">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Thẻ</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          {{ journalEntry.panNumber.replace("XXX-XXX", "X") }}
-        </td>
-      </ng-container> -->
 
       <ng-container matColumnDef="officeName">
         <th mat-header-cell *matHeaderCellDef>
@@ -213,17 +236,21 @@
         </td>
       </ng-container>
 
-      <!-- <ng-container matColumnDef="agencyName">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Đại lý</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">{{ journalEntry.agencyName }}</td>
-      </ng-container> -->
-
       <ng-container matColumnDef="requestAmount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Số tiền Tạm ứng <br />
-          (a)
+          (a) / <br />
+          Phí thu
         </th>
-        <td mat-cell *matCellDef="let journalEntry">{{ journalEntry?.principal | money }}</td>
+        <td mat-cell *matCellDef="let journalEntry">
+          <label for="">
+            {{ journalEntry?.principal | money }}
+          </label>
+          <br />
+          <label style="color: green" for="">
+            {{ ((journalEntry?.feePercentage / 100) * journalEntry?.reqAmount).toFixed(0) | money }}
+          </label>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="paidAmount">
