--- a/src/app/clients/client-customer/client-customer.component.html
+++ b/src/app/clients/client-customer/client-customer.component.html
@@ -4,7 +4,7 @@
       <mat-form-field fxFlex="18%">
         <mat-label>Chi nhánh</mat-label>
         <mat-select formControlName="officeId">
-          <mat-option *ngFor="let office of offices" [value]="office.id">
+          <mat-option *ngFor="let office of offices" [value]="office.officeId">
             {{ office.name }}
           </mat-option>
         </mat-select>
