--- a/src/app/transactions/dialog/view-fee-paid-transaction-dialog/view-fee-paid-transaction-dialog.component.html
+++ b/src/app/transactions/dialog/view-fee-paid-transaction-dialog/view-fee-paid-transaction-dialog.component.html
@@ -46,12 +46,13 @@
       <td mat-cell class="mat-cell-custom"
           *matCellDef="let transaction"
       >
-        <button mat-button *ngIf="transaction.txnType === 'ROLLTERM'"
+        <button *ngIf="(today | date: 'dd/MM/yyyy') == (transaction.createdDate | date: 'dd/MM/yyyy') && transaction.txnType === 'ROLLTERM'" mat-button
                 matTooltip="Hoàn tác dòng chi tiền"
-                (click)="revertTransaction(transaction.txnSavingResource)"
+                (click)="revertTransaction(transaction.txnSavingResource, transaction.createdDate )"
         >
           <img src="assets/images/icons/refresh.svg">
         </button>
+
       </td>
     </ng-container>
     <ng-container matColumnDef="expandedDetail">
