hide undo saving transaction on teller role

--- a/src/app/savings/savings-account-view/transactions/view-transaction/view-transaction.component.html
+++ b/src/app/savings/savings-account-view/transactions/view-transaction/view-transaction.component.html
@@ -9,7 +9,7 @@
     </button>
   </span>
   <button mat-raised-button color="warn"
-    *midasHasPermission="'UNDOTRANSACTION_SAVINGSACCOUNT'"
+    *midasHasPermission="'POS_UPDATE'"
     (click)="undoTransaction()">
     <fa-icon icon="undo"></fa-icon>&nbsp;&nbsp;Undo
   </button>
